add PostResponse class and complete pagination for get all posts